--- a/index.html
+++ b/index.html
@@ -31,16 +31,30 @@
   </section>
 
   <section id="faq" style="padding: 2rem;">
-    <h2 style="text-align: center;">FAQ</h2>
-    <ul style="max-width: 700px; margin: auto;">
-      <li><strong>Q: Who is this bot for?</strong><br>A: Small to mid-sized Greenville RP servers who need basic session control tools.</li>
-      <br>
-      <li><strong>Q: Can I get custom features?</strong><br>A: Not on Plan A. Plan B users may request light changes.</li>
-      <br>
-      <li><strong>Q: What are the commands?</strong><br>A: /startup, /settingup, /ea, /release, /reinvites, /end</li>
-    </ul>
-  </section>
+  <h2 style="text-align: center;">FAQ</h2>
+  <div class="faq-container">
+    <div class="faq-item">
+      <button class="faq-question">Who is this bot for?</button>
+      <div class="faq-answer">
+        <p>Small to mid-sized Greenville RP servers who need basic session control tools.</p>
+      </div>
+    </div>
 
+    <div class="faq-item">
+      <button class="faq-question">Can I get custom features?</button>
+      <div class="faq-answer">
+        <p>Not on Plan A. Plan B users may request light changes and support.</p>
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">What are the commands?</button>
+      <div class="faq-answer">
+        <p>/startup, /settingup, /ea, /release, /reinvites, /end</p>
+      </div>
+    </div>
+  </div>
+</section>
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
   </footer>
