--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+<script>
+  document.querySelectorAll('.faq-question').forEach(button => {
+    button.addEventListener('click', () => {
+      const faqItem = button.parentElement;
+      faqItem.classList.toggle('active');
+    });
+  });
+</script>
+
 <body>
 
   <nav>
@@ -55,6 +64,7 @@
     </div>
   </div>
 </section>
+
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
   </footer>
