--- a/index.html
+++ b/index.html
@@ -41,26 +41,18 @@
 
   <section id="faq" style="padding: 2rem;">
   <h2 style="text-align: center;">FAQ</h2>
-  <div class="faq-container">
+  <div class="faq">
     <div class="faq-item">
-      <button class="faq-question">Who is this bot for?</button>
-      <div class="faq-answer">
-        <p>Small to mid-sized Greenville RP servers who need basic session control tools.</p>
-      </div>
+      <div class="faq-question">Who is this bot for?</div>
+      <div class="faq-answer">Small to mid-sized Greenville RP servers who need basic session control tools.</div>
     </div>
-
     <div class="faq-item">
-      <button class="faq-question">Can I get custom features?</button>
-      <div class="faq-answer">
-        <p>Not on Plan A. Plan B users may request light changes and support.</p>
-      </div>
+      <div class="faq-question">Can I get custom features?</div>
+      <div class="faq-answer">Not on Plan A. Plan B users may request light changes and support.</div>
     </div>
-
     <div class="faq-item">
-      <button class="faq-question">What are the commands?</button>
-      <div class="faq-answer">
-        <p>/startup, /settingup, /ea, /release, /reinvites, /end</p>
-      </div>
+      <div class="faq-question">What are the commands?</div>
+      <div class="faq-answer">/startup, /settingup, /ea, /release, /reinvites, /end</div>
     </div>
   </div>
 </section>
