--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <script>
-  document.querySelectorAll('.faq-question').forEach(button => {
-    button.addEventListener('click', () => {
-      const faqItem = button.parentElement;
-      faqItem.classList.toggle('active');
+  document.querySelectorAll('.faq-question').forEach(question => {
+    question.addEventListener('click', () => {
+      const item = question.parentElement;
+      item.classList.toggle('open');
     });
   });
 </script>
