--- a/index.html
+++ b/index.html
@@ -1,64 +1,50 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CoreBots – Discord Bot Hosting</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CoreBots</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<header>
+  <h2>CoreBots</h2>
   <nav>
-    <h1>CoreBots</h1>
-    <ul>
-      <li><a href="plans.html">Plans</a></li>
-      <li><a href="order.html">Order</a></li>
-      <li><a href="#faq">FAQ</a></li>
-    </ul>
+    <a href="index.html">Home</a>
+    <a href="plans.html">Plans</a>
+    <a href="order.html">Order</a>
   </nav>
+</header>
 
-  <header>
-    <h2>CoreBots</h2>
-    <p><em>CoreBots, the core of your roleplay sessions.</em></p>
-    <p>Perfect for Greenville Roblox RP servers. Get a bot with <code>/startup</code>, <code>/ea</code>, <code>/release</code>, and more.</p>
-  </header>
+<section class="section">
+  <h1>CoreBots</h1>
+  <p>The core of your roleplay sessions.</p>
+</section>
 
-  <section class="interest">
-    <h2>Are you interested?</h2>
-    <p>Check out our pricing plans and start automating your RP sessions.</p>
-    <a href="plans.html"><button>View Plans</button></a>
-  </section>
-
-  <section id="faq" style="padding: 2rem;">
-  <h2 style="text-align: center;">FAQ</h2>
-  <div class="faq">
-    <div class="faq-item">
-      <div class="faq-question">Who is this bot for?</div>
-      <div class="faq-answer">Small to mid-sized Greenville RP servers who need basic session control tools.</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">Can I get custom features?</div>
-      <div class="faq-answer">Not on Plan A. Plan B users may request light changes and support.</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">What are the commands?</div>
-      <div class="faq-answer">/startup, /settingup, /ea, /release, /reinvites, /end</div>
-    </div>
+<section class="section">
+  <h2>Interested in Session Bots?</h2>
+  <p>Check out our plans to get started today with CoreBots.</p>
+  <div style="text-align: center; margin-top: 1.5rem;">
+    <a href="plans.html" class="btn">View Plans</a>
   </div>
 </section>
 
-  <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
-<script>
-  document.querySelectorAll('.faq-question').forEach(question => {
-    question.addEventListener('click', () => {
-      const item = question.parentElement;
-      item.classList.toggle('open');
-    });
-  });
-</script>
-  
+<section class="section">
+  <h2>FAQ</h2>
+  <div class="faq-item">
+    <h3>Who is this bot for?</h3>
+    <p>Small to mid-sized Greenville RP servers who need basic session control tools.</p>
+  </div>
+  <div class="faq-item">
+    <h3>Can I get custom features?</h3>
+    <p>Not on Plan A. Plan B users may request light changes and support.</p>
+  </div>
+  <div class="faq-item">
+    <h3>What are the commands?</h3>
+    <p>/startup, /settingup, /ea, /release, /reinvites, /end</p>
+  </div>
+</section>
 </body>
 </html>
