--- a/plans.html
+++ b/plans.html
@@ -1,40 +1,45 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CoreBots – Plans</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Plans | CoreBots</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<header>
+  <h2>CoreBots</h2>
   <nav>
-    <h1>CoreBots</h1>
-    <ul>
-      <li><a href="plans.html">Plans</a></li>
-      <li><a href="order.html">Order</a></li>
-      <li><a href="index.html#faq">FAQ</a></li>
-    </ul>
+    <a href="index.html">Home</a>
+    <a href="plans.html">Plans</a>
+    <a href="order.html">Order</a>
   </nav>
+</header>
 
-  <section class="plans">
-    <div class="plan">
-      <h3>Plan A – Code Only</h3>
-      <p>Just the source code. No hosting, no support.</p>
-      <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
-      <p class="price">$5.99 one-time</p>
+<section class="section">
+  <h2>Our Hosting Plans</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
+    <div class="plan-box">
+      <h3>Plan A</h3>
+      <p><strong>$5.99 one-time</strong></p>
+      <ul>
+        <li>✔ Basic Session Code</li>
+        <li>✖ No support</li>
+        <li>✖ No hosting</li>
+      </ul>
     </div>
-    <div class="plan">
-      <h3>Plan B – Code + Hosting + Support</h3>
-      <p>We'll host your bot, offer basic setup help, and updates.</p>
-      <p>Same command set, but with active support & uptime.</p>
-      <p class="price">$6.99/month</p>
+    <div class="plan-box">
+      <h3>Plan B</h3>
+      <p><strong>$6.99/month</strong></p>
+      <ul>
+        <li>✔ Code</li>
+        <li>✔ Ongoing support</li>
+        <li>✔ Hosting included</li>
+      </ul>
     </div>
-  </section>
-
-  <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
-
+  </div>
+</section>
 </body>
 </html>
