--- a/index.html
+++ b/index.html
@@ -2,49 +2,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CoreBots</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CoreBots | Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h2>CoreBots</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="plans.html">Plans</a>
+      <a href="order.html">Order</a>
+    </nav>
+  </header>
 
-<header>
-  <h2>CoreBots</h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="plans.html">Plans</a>
-    <a href="order.html">Order</a>
-  </nav>
-</header>
+  <section class="section">
+    <h1>CoreBots</h1>
+    <p>The core of your roleplay sessions.</p>
+  </section>
 
-<section class="section">
-  <h1>CoreBots</h1>
-  <p>The core of your roleplay sessions.</p>
-</section>
-
-<section class="section">
-  <h2>Interested in Session Bots?</h2>
-  <p>Check out our plans to get started today with CoreBots.</p>
-  <div style="text-align: center; margin-top: 1.5rem;">
+  <section class="section cta">
+    <h2>Ready to get started?</h2>
+    <p>Check out our plans and choose what fits your needs.</p>
     <a href="plans.html" class="btn">View Plans</a>
-  </div>
-</section>
+  </section>
 
-<section class="section">
-  <h2>FAQ</h2>
-  <div class="faq-item">
-    <h3>Who is this bot for?</h3>
-    <p>Small to mid-sized Greenville RP servers who need basic session control tools.</p>
-  </div>
-  <div class="faq-item">
-    <h3>Can I get custom features?</h3>
-    <p>Not on Plan A. Plan B users may request light changes and support.</p>
-  </div>
-  <div class="faq-item">
-    <h3>What are the commands?</h3>
-    <p>/startup, /settingup, /ea, /release, /reinvites, /end</p>
-  </div>
-</section>
+  <section class="section faq">
+    <h2>FAQ</h2>
+    <div class="faq-item"><h3>Who is this bot for?</h3><p>Small to mid-sized Greenville RP servers.</p></div>
+    <div class="faq-item"><h3>Custom features?</h3><p>Only available for Plan B users with support.</p></div>
+    <div class="faq-item"><h3>Commands included?</h3><p>/startup, /settingup, /ea, /release, /reinvites, /end</p></div>
+  </section>
 </body>
 </html>
