--- a/order.html
+++ b/order.html
@@ -2,28 +2,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order | CoreBots</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CoreBots | Order</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h2>CoreBots</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="plans.html">Plans</a>
+      <a href="order.html">Order</a>
+    </nav>
+  </header>
 
-<header>
-  <h2>CoreBots</h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="plans.html">Plans</a>
-    <a href="order.html">Order</a>
-  </nav>
-</header>
-
-<section class="section">
-  <h2>Order Now</h2>
-  <p>All orders are placed through our official Discord server. Join now, open a ticket, and we’ll guide you through payment and setup!</p>
-  <div style="text-align: center; margin-top: 2rem;">
-    <a href="https://discord.gg/PeUB26RtKx" class="btn" target="_blank">Join Our Discord</a>
-  </div>
-</section>
+  <section class="section">
+    <h2>Order Your Bot</h2>
+    <p>All orders go through our Discord server. Click below to join and open a ticket.</p>
+    <a href="https://discord.gg/PeUB26RtKx" target="_blank" class="btn">Join Our Discord</a>
+  </section>
 </body>
 </html>
