--- a/plans.html
+++ b/plans.html
@@ -2,44 +2,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plans | CoreBots</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CoreBots | Plans</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h2>CoreBots</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="plans.html">Plans</a>
+      <a href="order.html">Order</a>
+    </nav>
+  </header>
 
-<header>
-  <h2>CoreBots</h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="plans.html">Plans</a>
-    <a href="order.html">Order</a>
-  </nav>
-</header>
-
-<section class="section">
-  <h2>Our Hosting Plans</h2>
-  <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
-    <div class="plan-box">
-      <h3>Plan A</h3>
-      <p><strong>$5.99 one-time</strong></p>
-      <ul>
-        <li>✔ Basic Session Code</li>
-        <li>✖ No support</li>
-        <li>✖ No hosting</li>
-      </ul>
+  <section class="section">
+    <h2>Choose Your Plan</h2>
+    <div class="plans-container">
+      <div class="plan-box">
+        <h3>Plan A</h3>
+        <p><strong>$5.99 One-Time</strong></p>
+        <ul><li>Basic Code Only</li><li>No Support</li><li>No Hosting</li></ul>
+      </div>
+      <div class="plan-box">
+        <h3>Plan B</h3>
+        <p><strong>$6.99 Monthly</strong></p>
+        <ul><li>Code + Support</li><li>Hosting Included</li></ul>
+      </div>
     </div>
-    <div class="plan-box">
-      <h3>Plan B</h3>
-      <p><strong>$6.99/month</strong></p>
-      <ul>
-        <li>✔ Code</li>
-        <li>✔ Ongoing support</li>
-        <li>✔ Hosting included</li>
-      </ul>
-    </div>
-  </div>
-</section>
+  </section>
 </body>
 </html>
