--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CoreBots | Home</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CoreBots – Discord Bot Hosting</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <nav>
+    <h1>CoreBots</h1>
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="#faq">FAQ</a></li>
+    </ul>
+  </nav>
+
   <header>
     <h2>CoreBots</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="plans.html">Plans</a>
-      <a href="order.html">Order</a>
-    </nav>
+    <p><em>CoreBots, the core of your roleplay sessions.</em></p>
+    <p>Perfect for Greenville Roblox RP servers. Get a bot with <code>/startup</code>, <code>/ea</code>, <code>/release</code>, and more.</p>
   </header>
 
-  <section class="section">
-    <h1>CoreBots</h1>
-    <p>The core of your roleplay sessions.</p>
+  <section class="interest">
+    <h2>Are you interested?</h2>
+    <p>Check out our pricing plans and start automating your RP sessions.</p>
+    <a href="plans.html"><button>View Plans</button></a>
   </section>
 
-  <section class="section cta">
-    <h2>Ready to get started?</h2>
-    <p>Check out our plans and choose what fits your needs.</p>
-    <a href="plans.html" class="btn">View Plans</a>
+  <section id="faq" style="padding: 2rem;">
+    <h2 style="text-align: center;">FAQ</h2>
+    <ul style="max-width: 700px; margin: auto;">
+      <li><strong>Q: Who is this bot for?</strong><br>A: Small to mid-sized Greenville RP servers who need basic session control tools.</li>
+      <br>
+      <li><strong>Q: Can I get custom features?</strong><br>A: Not on Plan A. Plan B users may request light changes.</li>
+      <br>
+      <li><strong>Q: What are the commands?</strong><br>A: /startup, /settingup, /ea, /release, /reinvites, /end</li>
+    </ul>
   </section>
 
-  <section class="section faq">
-    <h2>FAQ</h2>
-    <div class="faq-item"><h3>Who is this bot for?</h3><p>Small to mid-sized Greenville RP servers.</p></div>
-    <div class="faq-item"><h3>Custom features?</h3><p>Only available for Plan B users with support.</p></div>
-    <div class="faq-item"><h3>Commands included?</h3><p>/startup, /settingup, /ea, /release, /reinvites, /end</p></div>
-  </section>
+  <footer>
+    &copy; 2025 CoreBots. All rights reserved.
+  </footer>
+
 </body>
 </html>
