--- a/plans.html
+++ b/plans.html
@@ -1,36 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CoreBots | Plans</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CoreBots – Plans</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h2>CoreBots</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="plans.html">Plans</a>
-      <a href="order.html">Order</a>
-    </nav>
-  </header>
 
-  <section class="section">
-    <h2>Choose Your Plan</h2>
-    <div class="plans-container">
-      <div class="plan-box">
-        <h3>Plan A</h3>
-        <p><strong>$5.99 One-Time</strong></p>
-        <ul><li>Basic Code Only</li><li>No Support</li><li>No Hosting</li></ul>
-      </div>
-      <div class="plan-box">
-        <h3>Plan B</h3>
-        <p><strong>$6.99 Monthly</strong></p>
-        <ul><li>Code + Support</li><li>Hosting Included</li></ul>
-      </div>
+  <nav>
+    <h1>CoreBots</h1>
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="index.html#faq">FAQ</a></li>
+    </ul>
+  </nav>
+
+  <section class="plans">
+    <div class="plan">
+      <h3>Plan A – Code Only</h3>
+      <p>Just the source code. No hosting, no support.</p>
+      <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
+      <p class="price">$5.99 one-time</p>
+    </div>
+    <div class="plan">
+      <h3>Plan B – Code + Hosting + Support</h3>
+      <p>We'll host your bot, offer basic setup help, and updates.</p>
+      <p>Same command set, but with active support & uptime.</p>
+      <p class="price">$6.99/month</p>
     </div>
   </section>
+
+  <footer>
+    &copy; 2025 CoreBots. All rights reserved.
+  </footer>
+
 </body>
 </html>
