--- a/order.html
+++ b/order.html
@@ -1,26 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CoreBots | Order</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CoreBots – Order</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h2>CoreBots</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="plans.html">Plans</a>
-      <a href="order.html">Order</a>
-    </nav>
-  </header>
 
-  <section class="section">
-    <h2>Order Your Bot</h2>
-    <p>All orders go through our Discord server. Click below to join and open a ticket.</p>
-    <a href="https://discord.gg/PeUB26RtKx" target="_blank" class="btn">Join Our Discord</a>
+  <nav>
+    <h1>CoreBots</h1>
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="index.html#faq">FAQ</a></li>
+    </ul>
+  </nav>
+
+  <section style="padding: 3rem; text-align: center;">
+    <h2>How to Order</h2>
+    <p>Join our Discord server to place an order or ask questions:</p>
+    <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" style="font-weight: bold; color: #ccc;">https://discord.gg/PeUB26RtKx</a></p>
+    <br>
+    <a href="https://discord.gg/PeUB26RtKx" target="_blank">
+      <button style="padding: 0.75rem 1.5rem; background: #6a0dad; color: white; font-weight: 600; border: none; border-radius: 8px;">Join Discord</button>
+    </a>
   </section>
+
+  <footer>
+    &copy; 2025 CoreBots. All rights reserved.
+  </footer>
+
 </body>
 </html>
