--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CoreBots – Discord Bot Hosting</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -30,15 +30,20 @@
     <a href="plans.html"><button>View Plans</button></a>
   </section>
 
-  <section id="faq" style="padding: 2rem;">
-    <h2 style="text-align: center;">FAQ</h2>
-    <ul style="max-width: 700px; margin: auto;">
-      <li><strong>Q: Who is this bot for?</strong><br>A: Small to mid-sized Greenville RP servers who need basic session control tools.</li>
-      <br>
-      <li><strong>Q: Can I get custom features?</strong><br>A: Not on Plan A. Plan B users may request light changes.</li>
-      <br>
-      <li><strong>Q: What are the commands?</strong><br>A: /startup, /settingup, /ea, /release, /reinvites, /end</li>
-    </ul>
+  <section id="faq" class="faq-section">
+    <h2>FAQ</h2>
+    <div class="faq-item">
+      <p><strong>Q: Who is this bot for?</strong></p>
+      <p>A: Small to mid-sized Greenville RP servers who need basic session control tools.</p>
+    </div>
+    <div class="faq-item">
+      <p><strong>Q: Can I get custom features?</strong></p>
+      <p>A: Not on Plan A. Plan B users may request light changes.</p>
+    </div>
+    <div class="faq-item">
+      <p><strong>Q: What are the commands?</strong></p>
+      <p>A: /startup, /settingup, /ea, /release, /reinvites, /end</p>
+    </div>
   </section>
 
   <footer>
