--- a/plans.html
+++ b/plans.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CoreBots – Plans</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -17,20 +18,22 @@
     </ul>
   </nav>
 
-  <section class="plans">
-    <div class="plan">
-      <h3>Plan A – Code Only</h3>
-      <p>Just the source code. No hosting, no support.</p>
-      <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
-      <p class="price">$5.99 one-time</p>
-    </div>
-    <div class="plan">
-      <h3>Plan B – Code + Hosting + Support</h3>
-      <p>We'll host your bot, offer basic setup help, and updates.</p>
-      <p>Same command set, but with active support & uptime.</p>
-      <p class="price">$6.99/month</p>
-    </div>
-  </section>
+  <main>
+    <section class="plans">
+      <div class="plan">
+        <h3>Plan A – Code Only</h3>
+        <p>Just the source code. No hosting, no support.</p>
+        <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
+        <p class="price">$5.99 one-time</p>
+      </div>
+      <div class="plan">
+        <h3>Plan B – Code + Hosting + Support</h3>
+        <p>We'll host your bot, offer basic setup help, and updates.</p>
+        <p>Same command set, but with active support & uptime.</p>
+        <p class="price">$6.99/month</p>
+      </div>
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
