--- a/order.html
+++ b/order.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CoreBots – Order</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -17,15 +18,16 @@
     </ul>
   </nav>
 
-  <section style="padding: 3rem; text-align: center;">
-    <h2>How to Order</h2>
-    <p>Join our Discord server to place an order or ask questions:</p>
-    <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" style="font-weight: bold; color: #ccc;">https://discord.gg/PeUB26RtKx</a></p>
-    <br>
-    <a href="https://discord.gg/PeUB26RtKx" target="_blank">
-      <button style="padding: 0.75rem 1.5rem; background: #6a0dad; color: white; font-weight: 600; border: none; border-radius: 8px;">Join Discord</button>
-    </a>
-  </section>
+  <main>
+    <section class="order-section">
+      <h2>How to Order</h2>
+      <p>Join our Discord server to place an order or ask questions:</p>
+      <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener" class="discord-link">https://discord.gg/PeUB26RtKx</a></p>
+      <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
+        <button class="discord-button">Join Discord</button>
+      </a>
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
