--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="plans.html">Plans</a></li>
       <li><a href="order.html">Order</a></li>
-      <li><a href="#faq">FAQ</a></li>
+      <li><a href="faq.html">FAQ</a></li>
     </ul>
   </nav>
 
@@ -29,23 +29,6 @@
     <p>Check out our pricing plans and start automating your RP sessions.</p>
     <a href="plans.html"><button>View Plans</button></a>
   </section>
-
-  <section id="faq" class="faq-section">
-    <h2>FAQ</h2>
-    <div class="faq-item">
-      <p><strong>Q: Who is this bot for?</strong></p>
-      <p>A: Small to mid-sized Greenville RP servers who need basic session control tools.</p>
-    </div>
-    <div class="faq-item">
-      <p><strong>Q: Can I get custom features?</strong></p>
-      <p>A: Not on Plan A. Plan B users may request light changes.</p>
-    </div>
-    <div class="faq-item">
-      <p><strong>Q: What are the commands?</strong></p>
-      <p>A: /startup, /settingup, /ea, /release, /reinvites, /end</p>
-    </div>
-  </section>
-
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
   </footer>
