--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CoreBots – FAQ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  <nav>
+    <h1>CoreBots</h1>
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+    </ul>
+  </nav>
+
+  <section style="padding: 3rem;">
+    <h2 style="text-align: center;">Frequently Asked Questions</h2>
+    <ul style="max-width: 800px; margin: auto; line-height: 1.75rem;">
+      <li><strong>1. Who is this bot for?</strong><br>Small to mid-sized Greenville RP servers who need basic session control tools.</li><br>
+      <li><strong>2. What does Plan A include?</strong><br>Only the bot source code, with no setup help or hosting.</li><br>
+      <li><strong>3. What does Plan B include?</strong><br>Source code, basic support, and bot hosting by CoreBots.</li><br>
+      <li><strong>5. What support do you offer?</strong><br>Plan B includes minor help and bug support. Plan A has no support.</li><br>
+      <li><strong>6. Can I upgrade later?</strong><br>Yes, Plan A users can later upgrade to Plan B through our Discord.</li><br>
+      <li><strong>7. How do I host the bot myself?</strong><br>You’ll receive a zip of the bot files and can host it anywhere (Replit, Cybrancee, etc).</li><br>
+      <li><strong>8. Do you update the bot?</strong><br>Only Plan B gets occasional updates or command changes if needed.</li><br>
+      <li><strong>9. Where can I order?</strong><br>All orders go through our Discord: <a href="https://discord.gg/PeUB26RtKx" target="_blank">Join here</a>.</li>
+    </ul>
+  </section>
+
+  <footer>
+    &copy; 2025 CoreBots. All rights reserved.
+  </footer>
+
+</body>
+</html>
