--- a/faq.html
+++ b/faq.html
@@ -21,13 +21,11 @@
     <h2 style="text-align: center;">Frequently Asked Questions</h2>
     <ul style="max-width: 800px; margin: auto; line-height: 1.75rem;">
       <li><strong>1. Who is this bot for?</strong><br>Small to mid-sized Greenville RP servers who need basic session control tools.</li><br>
-      <li><strong>2. What does Plan A include?</strong><br>Only the bot source code, with no setup help or hosting.</li><br>
-      <li><strong>3. What does Plan B include?</strong><br>Source code, basic support, and bot hosting by CoreBots.</li><br>
-      <li><strong>5. What support do you offer?</strong><br>Plan B includes minor help and bug support. Plan A has no support.</li><br>
-      <li><strong>6. Can I upgrade later?</strong><br>Yes, Plan A users can later upgrade to Plan B through our Discord.</li><br>
-      <li><strong>7. How do I host the bot myself?</strong><br>You’ll receive a zip of the bot files and can host it anywhere (Replit, Cybrancee, etc).</li><br>
-      <li><strong>8. Do you update the bot?</strong><br>Only Plan B gets occasional updates or command changes if needed.</li><br>
-      <li><strong>9. Where can I order?</strong><br>All orders go through our Discord: <a href="https://discord.gg/PeUB26RtKx" target="_blank">Join here</a>.</li>
+      <li><strong>2. What does Plan A include?</strong><br>Only the bot source code, with no setup help nor hosting.</li><br>
+      <li><strong>3. What does Plan B include?</strong><br>A custom hosted bot based on the code of Plan A and support.</li><br>
+      <li><strong>5. What support do you offer?</strong><br>Plan B includes support for the hosted bot. Plan A has no support.</li><br>
+      <li><strong>6. Do you update the bot?</strong><br>No the code for both plans is as is, exceptions can be made on rare occasions.</li><br>
+      <li><strong>7. Where can I order?</strong><br>Head over to the order tab in the navigation bar and you will find all info there..</li>
     </ul>
   </section>
 
