--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <ul>
       <li><a href="plans.html">Plans</a></li>
       <li><a href="order.html">Order</a></li>
-      <li><a href="faq.html">FAQ</a></li>
     </ul>
   </nav>
 
@@ -24,13 +23,59 @@
     <p>Perfect for Greenville Roblox RP servers. Get a bot with <code>/startup</code>, <code>/ea</code>, <code>/release</code>, and more.</p>
   </header>
 
+  <section class="features">
+    <h2>Core Features</h2>
+    <div class="feature-grid">
+      <div class="feature-box">
+        <h3>/startup</h3>
+        <p>Launch your session with ease and auto-log it.</p>
+      </div>
+      <div class="feature-box">
+        <h3>/ea</h3>
+        <p>Grant early access roles instantly to participants.</p>
+      </div>
+      <div class="feature-box">
+        <h3>/release</h3>
+        <p>Send release announcements with built-in buttons.</p>
+      </div>
+      <div class="feature-box">
+        <h3>/end</h3>
+        <p>End sessions and log them in seconds with a single command.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="benefits">
+    <h2>Why Choose CoreBots?</h2>
+    <ul>
+      <li>✔️ Clean, modern command structure</li>
+      <li>✔️ Designed specifically for Greenville RP</li>
+      <li>✔️ Affordable plans with hosting included</li>
+      <li>✔️ Trusted by dozens of roleplay communities</li>
+    </ul>
+  </section>
+
+  <section class="testimonials">
+    <h2>What Our Users Say</h2>
+    <blockquote>
+      "CoreBots saved us so much time setting up sessions. The /startup and /ea commands are 🔥"
+      <footer>– RandomRP Staff</footer>
+    </blockquote>
+  </section>
+
   <section class="interest">
     <h2>Are you interested?</h2>
     <p>Check out our pricing plans and start automating your RP sessions.</p>
     <a href="plans.html"><button>View Plans</button></a>
   </section>
+
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
+  </footer>
+
+</body>
+</html>
+
   </footer>
 
 </body>
