--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
 
   <nav>
-    <h1>CoreBots</h1>
+  <h1>CoreBots</h1>
+  <div class="nav-links">
     <ul>
       <li><a href="plans.html">Plans</a></li>
       <li><a href="order.html">Order</a></li>
+      <li><a href="faq.html">FAQ</a></li>
     </ul>
-  </nav>
+  </div>
+</nav>
+
 
   <header>
     <h2>CoreBots</h2>
