--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   <section class="testimonials">
     <h2>What Our Users Say</h2>
     <blockquote>
-      "CoreBots saved us so much time setting up sessions. The /startup and /ea commands are 🔥"
-      <footer>– RandomRP Staff</footer>
+      "CoreBots saved us so much time setting up sessions. The commands are great for small servers!"
+      <footer>– GV Roleplay Staff</footer>
     </blockquote>
   </section>
   
