--- a/index.html
+++ b/index.html
@@ -28,26 +28,39 @@
   </header>
 
   <section class="features">
-    <h2>Core Features</h2>
-    <div class="feature-grid">
-      <div class="feature-box">
-        <h3>/startup</h3>
-        <p>Launch your session with ease and auto-log it.</p>
-      </div>
-      <div class="feature-box">
-        <h3>/ea</h3>
-        <p>Grant early access roles instantly to participants.</p>
-      </div>
-      <div class="feature-box">
-        <h3>/release</h3>
-        <p>Send release announcements with built-in buttons.</p>
-      </div>
-      <div class="feature-box">
-        <h3>/end</h3>
-        <p>End sessions and log them in seconds with a single command.</p>
-      </div>
+  <h2>Core Features</h2>
+  <div class="feature-grid">
+    <div class="feature-box">
+      <h3>/startup</h3>
+      <p>Startup your session with ease.</p>
     </div>
-  </section>
+    <div class="feature-box">
+      <h3>/ea</h3>
+      <p>Send early access in the EA channel.</p>
+    </div>
+    <div class="feature-box">
+      <h3>/release</h3>
+      <p>Release your session with the server link directly linked with a button.</p>
+    </div>
+    <div class="feature-box">
+      <h3>/end</h3>
+      <p>End sessions and log them in seconds with a single command.</p>
+    </div>
+    <div class="feature-box">
+      <h3>/settingup</h3>
+      <p>Announce that you're setting up your session.</p>
+    </div>
+    <div class="feature-box">
+      <h3>/reinvites</h3>
+      <p>Manage reinvites easily through one command.</p>
+    </div>
+    <div class="feature-box">
+      <h3>/cohost</h3>
+      <p>Co-hosting? Announce it with ease.</p>
+    </div>
+  </div>
+</section>
+
 
   <section class="benefits">
     <h2>Why Choose CoreBots?</h2>
