--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     <p><em>CoreBots, the core of your roleplay sessions.</em></p>
     <p>Perfect for Greenville Roblox RP servers. Get a bot with <code>/startup</code>, <code>/ea</code>, <code>/release</code>, and more.</p>
   </header>
-
+  <section class="benefits">
+    <h2>Why Choose CoreBots?</h2>
+    <ul>
+      <li>Clean, modern command structure</li>
+      <li>Designed specifically for Greenville RP</li>
+      <li>Affordable plans</li>
+      <li>Trusted by roleplay communities</li>
+    </ul>
+  </section>
+  
   <section class="features">
   <h2>Core Features</h2>
   <div class="feature-grid">
@@ -60,17 +69,6 @@
     </div>
   </div>
 </section>
-
-
-  <section class="benefits">
-    <h2>Why Choose CoreBots?</h2>
-    <ul>
-      <li>✔️ Clean, modern command structure</li>
-      <li>✔️ Designed specifically for Greenville RP</li>
-      <li>✔️ Affordable plans with hosting included</li>
-      <li>✔️ Trusted by dozens of roleplay communities</li>
-    </ul>
-  </section>
 
   <section class="interest">
     <h2>Are you interested?</h2>
