--- a/plans.html
+++ b/plans.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="plans.html">Plans</a></li>
       <li><a href="order.html">Order</a></li>
-      <li><a href="index.html#faq">FAQ</a></li>
+      <li><a href="faq.html">FAQ</a></li>
     </ul>
   </nav>
 
