--- a/plans.html
+++ b/plans.html
@@ -19,21 +19,31 @@
   </nav>
 
   <main>
-    <section class="plans">
-      <div class="plan">
-        <h3>Plan A – Code Only</h3>
-        <p>Just the source code. No hosting, no support.</p>
-        <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
-        <p class="price">$5.99 one-time</p>
-      </div>
-      <div class="plan">
-        <h3>Plan B – Code + Hosting + Support</h3>
-        <p>We'll host your bot, offer basic setup help, and updates.</p>
-        <p>Same command set, but with active support & uptime.</p>
-        <p class="price">$6.99/month</p>
-      </div>
+  <section class="plans">
+    <div class="plan">
+      <h3>Plan A – Code Only</h3>
+      <p>Just the source code. No hosting, no support.</p>
+      <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
+      <p class="price">$5.99 one-time</p>
+    </div>
+    <div class="plan">
+      <h3>Plan B – Code + Hosting + Support</h3>
+      <p>We'll host your bot, offer basic setup help, and updates.</p>
+      <p>Same command set, but with active support & uptime.</p>
+      <p class="price">*$6.99/month</p> 
+    </div>
+
+    <p class="disclaimer" style="margin-top: 0.5rem; font-size: 0.9rem; color: #aaa;">
+      * The monthly price might change depending on server size as we have to keep that in mind for hosting.
+    </p>
+
+    <section class="payment-methods" style="margin-top: 2rem;">
+      <h3>Payment Methods</h3>
+      <p>We accept payments via <strong>PayPal Business Account</strong> only.</p>
     </section>
-  </main>
+  </section>
+</main>
+
 
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
