--- a/plans.html
+++ b/plans.html
@@ -33,11 +33,11 @@
       <p class="price">*$6.99/month</p> 
     </div>
 
-    <p class="disclaimer" style="margin-top: 0.5rem; font-size: 0.9rem; color: #aaa;">
+    <p class="disclaimer">
       * The monthly price might change depending on server size as we have to keep that in mind for hosting.
     </p>
 
-    <section class="payment-methods" style="margin-top: 2rem;">
+    <section class="payment-methods">
       <h3>Payment Methods</h3>
       <p>We accept payments via <strong>PayPal Business Account</strong> only.</p>
     </section>
