--- a/plans.html
+++ b/plans.html
@@ -40,7 +40,8 @@
 
   <section class="payment-methods">
     <h3>Payment Methods</h3>
-    <p>We accept payments via <strong>PayPal Business Account</strong> only.</p>
+    <p>We accept payments via <strong>PayPal</strong> only.</p>
+    <p>This is a secure transaction paid through our business account.</p>
   </section>
 </main>
 
