--- a/plans.html
+++ b/plans.html
@@ -43,6 +43,11 @@
     <p>We accept payments via <strong>PayPal</strong> only.</p>
     <p>This is a secure transaction paid through our business account.</p>
   </section>
+  <section class="interest">
+    <h2>Are you interested?</h2>
+    <p>Check out our pricing plans and start automating your RP sessions.</p>
+    <a href="order.html"><button>Order Now</button></a>
+  </section>
 </main>
 
 
