--- a/plans.html
+++ b/plans.html
@@ -45,7 +45,7 @@
   </section>
   <section class="interest">
     <h2>Are you interested?</h2>
-    <p>Check out our pricing plans and start automating your RP sessions.</p>
+    <p>Check out our order page and start automating your RP sessions.</p>
     <a href="order.html"><button>Order Now</button></a>
   </section>
 </main>
