--- a/faq.html
+++ b/faq.html
@@ -25,7 +25,8 @@
       <li><strong>3. What does Plan B include?</strong><br>A custom hosted bot based on the code of Plan A and support.</li><br>
       <li><strong>5. What support do you offer?</strong><br>Plan B includes support for the hosted bot. Plan A has no support.</li><br>
       <li><strong>6. Do you update the bot?</strong><br>No the code for both plans is as is, exceptions can be made on rare occasions.</li><br>
-      <li><strong>7. Where can I order?</strong><br>Head over to the order tab in the navigation bar and you will find all info there..</li>
+      <li><strong>7. Where can I order?</strong><br>Head over to the order tab in the navigation bar and you will find all info there.</li><br>
+      <li><strong>8. How long does delivery take?</strong><br>Plan A will be delivered within 24 hours, for Plan B we'll start configuring your bot within 24h-48h.</li>
     </ul>
   </section>
 
