--- a/order.html
+++ b/order.html
@@ -1,37 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CoreBots – Order</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+<main>
+  <section class="order-section">
+    <h2>How to Order</h2>
+    <p>Join our Discord server to place an order or ask questions:</p>
+    <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener" class="discord-link">https://discord.gg/PeUB26RtKx</a></p>
+    <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
+      <button class="discord-button">Join Discord</button>
+    </a>
 
-  <nav>
-    <h1>CoreBots</h1>
-    <ul>
-      <li><a href="plans.html">Plans</a></li>
-      <li><a href="order.html">Order</a></li>
-      <li><a href="faq.html">FAQ</a></li>
-    </ul>
-  </nav>
+    <!-- Steps -->
+    <div class="order-steps">
+      <h3>How It Works</h3>
+      <ol>
+        <li>Click the button to open a ticket in our Discord.</li>
+        <li>We’ll confirm your order and guide you through payment.</li>
+        <li>You’ll receive your bot setup (or code) within 24h.</li>
+      </ol>
+    </div>
 
-  <main>
-    <section class="order-section">
-      <h2>How to Order</h2>
-      <p>Join our Discord server to place an order or ask questions:</p>
-      <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener" class="discord-link">https://discord.gg/PeUB26RtKx</a></p>
-      <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
-        <button class="discord-button">Join Discord</button>
-      </a>
-    </section>
-  </main>
+    <!-- Payment Info -->
+    <p class="payment-reminder"><strong>We accept payments via <strong>PayPal</strong> only.</strong><br>
+    All transactions are securely processed through our verified business account.</p>
 
-  <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
+    <!-- Disclaimer -->
+    <p class="order-disclaimer">By ordering, you agree to our basic terms. We do not offer refunds for digital products once delivered.</p>
 
-</body>
-</html>
+    <!-- Benefits -->
+    <div class="order-benefits">
+      <h3>Why Choose CoreBots?</h3>
+      <ul>
+        <li>Fast delivery – usually within 12–24 hours</li>
+        <li>Friendly support team</li>
+        <li>Fully working, clean, and tested bots</li>
+        <li>Free bug fixes with hosting plan</li>
+      </ul>
+    </div>
+  </section>
+</main>
