--- a/order.html
+++ b/order.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CoreBots – Order</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <nav>
+    <h1>CoreBots</h1>
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+    </ul>
+  </nav>
+
 <main>
   <section class="order-section">
     <h2>How to Order</h2>
@@ -36,3 +56,10 @@
     </div>
   </section>
 </main>
+
+  <footer>
+    &copy; 2025 CoreBots. All rights reserved.
+  </footer>
+
+</body>
+</html>
