--- a/order.html
+++ b/order.html
@@ -18,44 +18,61 @@
     </ul>
   </nav>
 
-<main>
-  <section class="order-section">
-    <h2>How to Order</h2>
-    <p>Join our Discord server to place an order or ask questions:</p>
-    <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener" class="discord-link">https://discord.gg/PeUB26RtKx</a></p>
-    <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
-      <button class="discord-button">Join Discord</button>
-    </a>
+  <main>
+    <section class="order-section">
 
-    <!-- Steps -->
-    <div class="order-steps">
-      <h3>How It Works</h3>
-      <ol>
-        <li>Click the button to open a ticket in our Discord.</li>
-        <li>We’ll confirm your order and guide you through payment.</li>
-        <li>You’ll receive your bot setup (or code) within 24h.</li>
-      </ol>
-    </div>
+      <!-- Disclaimer -->
+      <div class="order-box">
+        <p class="order-disclaimer">
+          <strong>Disclaimer:</strong> By ordering, you agree to our basic terms. We do not offer refunds for digital products once delivered.
+        </p>
+      </div>
 
-    <!-- Payment Info -->
-    <p class="payment-reminder"><strong>We accept payments via <strong>PayPal</strong> only.</strong><br>
-    All transactions are securely processed through our verified business account.</p>
+      <!-- Steps -->
+      <div class="order-box">
+        <h3>How It Works</h3>
+        <ol>
+          <li>Click the button to open a ticket in our Discord.</li>
+          <li>We’ll confirm your order and guide you through payment.</li>
+          <li>You’ll receive your bot setup (or code) within 24h.</li>
+        </ol>
+      </div>
 
-    <!-- Disclaimer -->
-    <p class="order-disclaimer">By ordering, you agree to our basic terms. We do not offer refunds for digital products once delivered.</p>
+      <!-- Discord Link -->
+      <div class="order-box">
+        <h3>Ready to Get Started?</h3>
+        <p>Join our Discord server to place an order or ask questions:</p>
+        <p>
+          <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener" class="discord-link">
+            https://discord.gg/PeUB26RtKx
+          </a>
+        </p>
+        <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
+          <button class="discord-button">Join Discord</button>
+        </a>
+      </div>
 
-    <!-- Benefits -->
-    <div class="order-benefits">
-      <h3>Why Choose CoreBots?</h3>
-      <ul>
-        <li>Fast delivery – usually within 12–24 hours</li>
-        <li>Friendly support team</li>
-        <li>Fully working, clean, and tested bots</li>
-        <li>Free bug fixes with hosting plan</li>
-      </ul>
-    </div>
-  </section>
-</main>
+      <!-- Payment Info -->
+      <div class="order-box">
+        <p class="payment-reminder">
+          <strong>We accept payments via <strong>PayPal</strong> only.</strong><br>
+          All transactions are securely processed through our verified business account.
+        </p>
+      </div>
+
+      <!-- Benefits -->
+      <div class="order-box">
+        <h3>Why Choose CoreBots?</h3>
+        <ul>
+          <li>Fast delivery – usually within 12–24 hours</li>
+          <li>Friendly support team</li>
+          <li>Fully working, clean, and tested bots</li>
+          <li>Free bug fixes with hosting plan</li>
+        </ul>
+      </div>
+
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
