--- a/order.html
+++ b/order.html
@@ -21,11 +21,39 @@
   <main>
     <section class="order-section">
       <h2>How to Order</h2>
-      <p>Join our Discord server to place an order or ask questions:</p>
-      <p><a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener" class="discord-link">https://discord.gg/PeUB26RtKx</a></p>
+      <p>1. Join our Discord server.</p>
+      <p>2. Open a ticket in <strong>#order-bot</strong> or <strong>#order-hosting</strong>.</p>
+      <p>3. Provide all required details and wait for a response.</p>
+      <p>4. Once confirmed, you will be asked to pay.</p>
+
+      <div class="disclaimer">
+        We only accept orders through our Discord server. All communication and payments must happen there.
+      </div>
+
       <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
         <button class="discord-button">Join Discord</button>
       </a>
+
+      <div class="payment-methods">
+        <h3>Accepted Payment Methods</h3>
+        <p>We currently accept the following:</p>
+        <ul style="list-style: none; padding: 0; margin-top: 1rem;">
+          <li>✅ PayPal (Friends & Family only)</li>
+          <li>✅ CashApp</li>
+          <li>✅ Crypto (USDT, ETH, BTC)</li>
+        </ul>
+        <p style="margin-top: 1rem;">You will receive the payment address/instructions after your order is confirmed.</p>
+      </div>
+
+      <section class="benefits">
+        <h2>Why Order From CoreBots?</h2>
+        <ul>
+          <li>Fast turnaround time – most bots delivered within 24-48 hours</li>
+          <li>Experienced developers with modern coding standards</li>
+          <li>Free updates and bug fixes within your package</li>
+          <li>Fully hosted solutions available</li>
+        </ul>
+      </section>
     </section>
   </main>
 
