--- a/order.html
+++ b/order.html
@@ -19,43 +19,44 @@
   </nav>
 
   <main>
-    <section class="order-section">
-      <h2>How to Order</h2>
-      <p>1. Join our Discord server.</p>
-      <p>2. Open a ticket in <strong>#order-bot</strong> or <strong>#order-hosting</strong>.</p>
-      <p>3. Provide all required details and wait for a response.</p>
-      <p>4. Once confirmed, you will be asked to pay.</p>
+  <section class="order-section">
+    <h2>How to Order</h2>
 
-      <div class="disclaimer">
-        We only accept orders through our Discord server. All communication and payments must happen there.
-      </div>
+    <div class="disclaimer">
+      * Monthly plan pricing may vary depending on server size due to hosting requirements.
+    </div>
 
-      <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
-        <button class="discord-button">Join Discord</button>
-      </a>
+    <div class="steps-box">
+      <h3>Steps to Order</h3>
+      <ol>
+        <li>Join our Discord server.</li>
+        <li>Create a ticket in the order channel.</li>
+        <li>Wait for a developer to assist you.</li>
+      </ol>
+    </div>
 
-      <div class="payment-methods">
-        <h3>Accepted Payment Methods</h3>
-        <p>We currently accept the following:</p>
-        <ul style="list-style: none; padding: 0; margin-top: 1rem;">
-          <li>✅ PayPal (Friends & Family only)</li>
-          <li>✅ CashApp</li>
-          <li>✅ Crypto (USDT, ETH, BTC)</li>
-        </ul>
-        <p style="margin-top: 1rem;">You will receive the payment address/instructions after your order is confirmed.</p>
-      </div>
+    <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
+      <button class="discord-button">Join Discord</button>
+    </a>
 
-      <section class="benefits">
-        <h2>Why Order From CoreBots?</h2>
-        <ul>
-          <li>Fast turnaround time – most bots delivered within 24-48 hours</li>
-          <li>Experienced developers with modern coding standards</li>
-          <li>Free updates and bug fixes within your package</li>
-          <li>Fully hosted solutions available</li>
-        </ul>
-      </section>
+    <div class="payment-reminder">
+      <h3>Payment Method</h3>
+      <p>We accept payments via <strong>Paypal</strong> only.</p>
+      <p>All transactions are securely processed through our business account.</p>
+    </div>
+
+    <section class="benefits">
+      <h3>Why Order From Us?</h3>
+      <ul>
+        <li>Fast response & setup</li>
+        <li>Experienced developers</li>
+        <li>Unique & modern bot systems</li>
+        <li>Secure payments & professional service</li>
+      </ul>
     </section>
-  </main>
+  </section>
+</main>
+
 
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
