--- a/order.html
+++ b/order.html
@@ -23,7 +23,7 @@
     <h2>How to Order</h2>
 
     <div class="disclaimer">
-      * Monthly plan pricing may vary depending on server size due to hosting requirements.
+      Before ordering please read our order policy to avoid any problems.
     </div>
 
     <div class="steps-box">
@@ -31,7 +31,7 @@
       <ol>
         <li>Join our Discord server.</li>
         <li>Create a ticket in the order channel.</li>
-        <li>Wait for a developer to assist you.</li>
+        <li>Wait for someone to assist you.</li>
       </ol>
     </div>
 
