--- a/order.html
+++ b/order.html
@@ -39,11 +39,11 @@
       <button class="discord-button">Join Discord</button>
     </a>
 
-    <div class="payment-reminder">
-      <h3>Payment Method</h3>
-      <p>We accept payments via <strong>Paypal</strong> only.</p>
-      <p>All transactions are securely processed through our business account.</p>
-    </div>
+    <section class="payment-reminder">
+    <h3>Payment Method</h3>
+    <p>We accept payments via <strong>Paypal</strong> only.</p>
+    <p>All transactions are securely processed through our business account.</p>
+  </section>
 
     <section class="benefits">
       <h3>Why Order From Us?</h3>
