--- a/order.html
+++ b/order.html
@@ -41,17 +41,17 @@
 
     <section class="payment-reminder">
     <h3>Payment Method</h3>
-    <p>We accept payments via <strong>Paypal</strong> only.</p>
+    <p>We only accept payments via <strong>Paypal</strong> only.</p>
     <p>All transactions are securely processed through our business account.</p>
   </section>
 
     <section class="benefits">
       <h3>Why Order From Us?</h3>
       <ul>
-        <li>Fast response & setup</li>
-        <li>Experienced developers</li>
-        <li>Unique & modern bot systems</li>
-        <li>Secure payments & professional service</li>
+        <li>Setup within 24h-48h</li>
+        <li>Friendly developers</li>
+        <li>Trusted bot systems</li>
+        <li>Secure payments & great service</li>
       </ul>
     </section>
   </section>
