--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <h1>CoreBots</h1>
+    <h1><a href="index.html" class="logo-link">CoreBots</a></h1>
     <ul>
       <li><a href="plans.html">Plans</a></li>
       <li><a href="order.html">Order</a></li>
